[package]
name = "rutest"
version = "0.1.0"
edition = "2024"
description = "A next-level testing framework for Rust — BDD specs, property-based testing, parametrized tests, rich reporting, and code coverage"
license = "MIT"
repository = "https://github.com/reasvyn/rutest"
homepage = "https://github.com/reasvyn/rutest"
documentation = "https://docs.rs/rutest"

[[bin]]
name = "cargo-rutest"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
